# scikit-bio

./: .appveyor.yml  .buildinfo  .codecov.yml  .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  COPYING.txt  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  RELEASE.md  REVIEWING.md  Untitled.ipynb  aarch64.Dockerfile  aarch64_py36.Dockerfile  aarch64_py37.Dockerfile  aarch64_py38.Dockerfile  asv.conf.json  benchmark_sparse.py  bipy.core.distance.html  bipy.core.exception.html  bipy.core.sequence.html  checklist.py  core.alignment.html  core.distance.html  core.exception.html  core.genetic_code.html  core.sequence.html  core.ssw.html  core.tree.html  (+40 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: array-api-cpu.yml  array-api.yml  build_wheels.yml  ci.yml  lint-test-doc.yml  lint-test.yml  numba.yml  release.yml  temp-doc.yml  temp_doc.yml  website.yml  wheels.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
_sources/: index.txt  maths.stats.distance.txt  maths.stats.ordination.txt  maths.stats.spatial.txt  maths.subsample.txt  util.trie.txt
assets/: raw_logo.xcf  style.css
benchmarks/: benchmarks.py
bipy/: __init__.py
bipy/app/: __init__.py  parameters.py  util.py
bipy/core/: __init__.py  alignment.py  constrained_container.py  distance.py  exception.py  factory.py  iterator.py  sequence.py  sequence_iterators.py  tree.py  workflow.py
bipy/draw/: distributions.py
bipy/format/: __init__.py  fasta.py
bipy/maths/: __init__.py
bipy/parse/: __init__.py  fasta.py  fastq.py  mothur.py  record.py  record_finder.py
bipy/util/: __init__.py  misc.py  transform.py  unit_test.py
ci/: aarch64.conda_requirements.txt  aarch64.requirements.txt  conda_host_env.yml  conda_requirements.txt  pip_requirements.txt  requirements.doc.txt  requirements.lint.txt  requirements.test.txt
cookbook/: index.html
courseProjectCode/Metrics/: README.md  metrics.py
courseProjectDocs/: project-proposal.md
development/: new_module.html  py3.html
doc/: Makefile  README.md  editmap.py  metatag.py  rtd-requirements.txt  suburl.py
doc/source/: alignment.rst  autoinherit.py  bipy.maths.stats.distance.rst  cluster.procrustes.rst  composition.rst  conf.py  config.rst  core.alignment.rst  core.distance.rst  core.exception.rst  core.genetic_code.rst  core.iterator.rst  core.sequence.rst  core.tree.rst  core.warning.rst  core.workflow.rst  db.base.rst  db.ncbi.rst  db.rst  distance.rst  diversity.rst  draw.distributions.rst  draw.rst  embedding.rst  evolve.rst  factory.sequence.rst  feature_table.rst  format.sequences.rst  format.stockholm.rst  genetic_code.rst  goenrich.rst  gradient.rst  index.rst  io.rst  math.diversity.beta.rst  math.stats.distance.rst  math.stats.evolve.rst  math.stats.ordination.rst  math.stats.rst  math.stats.spatial.rst  (+22 more)
docs/: core.alignment.html  core.distance.html  core.exception.html  core.genetic_code.html  core.sequence.html  core.ssw.html  core.tree.html  core.warning.html  core.workflow.html  draw.distributions.html  format.sequences.html  genindex.html  index.html  math.diversity.alpha.html  math.gradient.html  math.stats.distance.html  math.stats.ordination.html  math.stats.spatial.html  math.subsample.html  objects.inv  parse.sequences.html  py-modindex.html  search.html  searchindex.js  util.io.html  util.misc.html  util.testing.html
docs/0.1.1/: core.alignment.html  core.distance.html  core.exception.html  core.ssw.html  format.sequences.html  genindex.html  math.gradient.html  math.stats.distance.html  math.stats.ordination.html  objects.inv  py-modindex.html  search.html  util.misc.html  util.testing.html
docs/0.1.2/: core.distance.html  core.genetic_code.html  core.sequence.html  core.tree.html  core.warning.html  core.workflow.html  draw.distributions.html  genindex.html  index.html  math.stats.distance.html  math.stats.misc.html  math.stats.ordination.html  math.stats.spatial.html  math.subsample.html  objects.inv  parse.sequences.html  py-modindex.html  search.html  util.misc.html  util.testing.html
docs/0.1.3/: core.alignment.html  core.distance.html  core.exception.html  core.genetic_code.html  core.sequence.html  core.tree.html  core.warning.html  core.workflow.html  draw.distributions.html  format.sequences.html  genindex.html  index.html  math.diversity.alpha.html  math.gradient.html  math.stats.distance.html  math.stats.misc.html  math.stats.ordination.html  math.stats.spatial.html  math.subsample.html  objects.inv  parse.sequences.html  py-modindex.html  search.html  searchindex.js  util.io.html  util.misc.html  util.testing.html
docs/0.1.4/: core.alignment.html  core.distance.html  core.exception.html  core.genetic_code.html  core.sequence.html  core.tree.html  core.warning.html  core.workflow.html  draw.distributions.html  format.sequences.html  genindex.html  index.html  math.diversity.alpha.html  math.diversity.beta.html  math.gradient.html  math.stats.distance.html  math.stats.misc.html  math.stats.ordination.html  math.stats.spatial.html  math.subsample.html  objects.inv  (+7 more)
examples/: ordination.py  simple.py
html/: core.alignment.html  core.distance.html  core.exception.html  core.tree.html  draw.distributions.html  genindex.html  index.html  maths.stats.distance.html  maths.subsample.html  objects.inv  search.html
licenses/: bx_python.txt  fastq-example-files-readme.txt  flask.txt  ipython.txt  nb-slideshow-template.txt  numpydoc.txt  pydata_sphinx_theme.txt  qiita.txt  r-derivatives-agpl-3.txt  scikit-learn.txt  scipy.txt  simde.txt  sphinx-bootstrap-theme.txt  ssw.txt  verman.txt
ordination/: __init__.py  base.py  redundancy_analysis.py  utils.py
skbio/: __init__.py  _base.py  _config.py  _dispatcher.py  _optionals.py  conftest.py  distance.py  genetic_code.py  linalg.py  sequence.py  test.py  workflow.py
skbio-venv/: pyvenv.cfg
web/: .exclude  README.md  about.rst  conf.py  contribute.rst  index.rst  install.rst  learn.rst  roadmap.rst  suburl.py  versions.json
(+2207 files in other folders)
